
  [ Simon McVittie ]
  * debian/dbus.bug-control: when people report bugs against dbus,
    also report the status of systemd and systemd-sysv (because
    those alter how system service activation works), and dbus-x11
    (because that's responsible for normal session bus setup)
  * Make Build-Profiles field comply with updated spec (patch from
    Johannes Schauer, Closes: #764222)

 -- Simon McVittie <smcv@debian.org>  Mon, 22 Sep 2014 11:52:10 +0100

dbus (1.8.8-1) unstable; urgency=medium

  [ Michael Biebl ]
  * Don't attempt config reload if dbus system bus is not running.

  [ Simon McVittie ]
  * Bump dbus up to Priority: standard because without it, systemd-logind
    does not run a getty on tty2..tty6 (matching ftp-master action in
    #759293)
  * New upstream release fixes several security issues
    - CVE-2014-3635: do not accept an extra fd in cmsg padding,
      avoiding a buffer overrun in dbus-daemon or system services
    - CVE-2014-3636: reduce maximum number of file descriptors
       per message from 1024 to 16, to avoid two separate denial-of-service
       attacks that could cause system services to be dropped from the bus
    - CVE-2014-3637: time out connections that have a
       partially-sent message containing a file descriptor, so that
       malicious processes cannot use self-referential file descriptors
       to make a connection that will never close
    - CVE-2014-3638: reduce maximum number of pending replies
      per connection to avoid algorithmic complexity DoS
    - CVE-2014-3639: reduce timeout for authentication and
      do not accept() new connections when all unauthenticated connection
      slots are in use, so that malicious processes cannot prevent new
      connections to the system bus
  * debian/copyright: fix glob syntax, .[ch] is not supported

 -- Simon McVittie <smcv@debian.org>  Mon, 15 Sep 2014 12:58:25 +0100

dbus (1.8.6-2) unstable; urgency=medium
